<resources>
    <string name="app_name">InteliBand</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_string">Login…</string>
    <string name="password_string">Password…</string>
    <string name="url">http://intelimed.fors-vyatka.ru/iapp</string>
    <string name="login">Login...</string>
    <string name="password">Password...</string>
    <string name="signin">Sign in</string>
    <string name="logo_title">Personal instant medical assistant</string>
    <string name="login_check_internet">Pls check internet connection</string>
    <string name="psl_ble_on">Пожалуйста включите Bluetooth!</string>
    <string name="finding_ble">ИЩУ MIBAND 1S...</string>
    <string name="not_support">Device does not support Bluetooth</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_devices">Ble devices</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="title_activity_controlcenter">Gadgetbridge</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_quit">Quit</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="controlcenter_start_sleepmonitor">Sleep Monitor (ALPHA)</string>
    <string name="controlcenter_find_device">Find lost Device…</string>
    <string name="controlcenter_take_screenshot">Take Screenshot</string>
    <string name="controlcenter_disconnect">Disconnect</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_appmanager">App Manager</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="title_activity_appblacklist">Notification Blacklist</string>
    <string name="title_activity_fw_app_insaller">FW/App installer</string>
    <string name="fw_upgrade_notice">You are about to install firmware %s instead of the one currently on your Mi Band.</string>
    <string name="fw_multi_upgrade_notice">You are about to install firmwares %1$s and %2$s instead of the ones currently on your Mi Band.</string>
    <string name="miband_firmware_known">This firmware has been tested and is known to be compatible with Gadgetbridge.</string>
    <string name="miband_firmware_unknown_warning">"This firmware is untested and may not be compatible with Gadgetbridge.\n\nYou are NOT encouraged to flash it to your Mi Band!"</string>
    <string name="miband_firmware_suggest_whitelist">If you still want to proceed and things continue to work properly afterwards, please tell the Gadgetbridge developers to whitelist firmware version: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General Settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to device when Bluetooth turned on</string>
    <string name="pref_title_audo_player">Preferred Audioplayer</string>
    <string name="pref_default">Default</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to device when connecting and when time or timezone changes on Android</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notifications_repetitions">Repetitions</string>
    <string name="pref_title_notifications_call">Phone Calls</string>
    <string name="pref_title_notifications_sms">SMS</string>
    <string name="pref_title_notifications_k9mail">K9-Mail</string>
    <string name="pref_title_notifications_pebblemsg">Pebble Messages</string>
    <string name="pref_summary_notifications_pebblemsg">Support for applications which send Notifications to the Pebble via Intent. Can be used for Conversations.</string>
    <string name="pref_title_notifications_generic">Generic notification support</string>
    <string name="pref_title_whenscreenon">… also when screen is on</string>
    <string name="always">always</string>
    <string name="when_screen_off">when screen is off</string>
    <string name="never">never</string>
    <string name="pref_blacklist">Blacklist Apps</string>
    <string name="pref_title_canned_replies">Canned Replies</string>
    <string name="pref_title_canned_reply_suffix">Common suffix</string>
    <string name="pref_header_development">Developer Options</string>
    <string name="pref_title_development_miaddr">Mi Band address</string>
    <string name="pref_title_pebble_settings">Pebble Settings</string>
    <string name="pref_title_pebble_activitytracker">Preferred Activitytracker</string>
    <string name="pref_title_enable_pebblekit">Allow 3rd Party Android App Access</string>
    <string name="pref_summary_enable_pebblekit">Enable experimental support for Android Apps using PebbleKit</string>
    <string name="pref_title_pebble_forceprotocol">Force Notification Protocol</string>
    <string name="pref_summary_pebble_forceprotocol">This option forces using the latest notification protocol depending on the firmware version. ENABLE ONLY IF YOU KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_forceuntested">Enable untested features</string>
    <string name="pref_summary_pebble_forceuntested">Enable features that are untested. ENABLE ONLY IF YOU KNOW WHAT YOU ARE DOING!</string>
    <string name="pref_title_pebble_reconnect_attempts">Reconnection Attempts</string>
    <string name="not_connected">not connected</string>
    <string name="connecting">connecting</string>
    <string name="connected">connected</string>
    <string name="unknown_state">unknown state</string>
    <string name="connectionstate_hw_fw">HW: %1$s FW: %2$s</string>
    <string name="connectionstate_fw">FW: %1$s</string>
    <string name="_unknown_">(unknown)</string>
    <string name="test">Test</string>
    <string name="test_notification">Test Notification</string>
    <string name="this_is_a_test_notification_from_gadgetbridge">This is a Test Notification from Gadgetbridge</string>
    <string name="bluetooth_is_not_supported_">Bluetooth is not supported.</string>
    <string name="bluetooth_is_disabled_">Bluetooth is disabled.</string>
    <string name="tap_connected_device_for_app_mananger">tap connected device for App Mananger</string>
    <string name="tap_a_device_to_connect">tap a device to connect</string>
    <string name="cannot_connect_bt_address_invalid_">Cannot connect. BT address invalid?</string>
    <string name="gadgetbridge_running">Gadgetbridge running</string>
    <string name="installing_binary_d_d">installing binary %1$d/%2$d</string>
    <string name="installation_failed_">installation failed!</string>
    <string name="installation_successful">installation successful</string>
    <string name="firmware_install_warning">YOU ARE TRYING TO INSTALL A FIRMWARE, PROCEED AT YOUR OWN RISK.\n\n\n This firmware is for HW Revision: %s</string>
    <string name="app_install_info">You are about to install the following app:\n\n\n%1$s Version %2$s by %3$s\n</string>
    <string name="n_a">N/A</string>
    <string name="initialized">initialized</string>
    <string name="appversion_by_creator">%1$s by %2$s</string>
    <string name="title_activity_discovery">Device Discovery</string>
    <string name="discovery_stop_scanning">Stop Scanning</string>
    <string name="discovery_start_scanning">Start Discovery</string>
    <string name="action_discover">Connect new Device</string>
    <string name="device_with_rssi">%1$s (%2$s)</string>
    <string name="title_activity_android_pairing">Pair Device</string>
    <string name="android_pairing_hint">Use the Android Bluetooth Pairing dialog to pair the device.</string>
    <string name="title_activity_mi_band_pairing">Pair your Mi Band</string>
    <string name="miband_pairing">Pairing with %s…</string>
    <string name="message_cannot_pair_no_mac">No mac address passed, cannot pair.</string>
    <string name="preferences_category_device_specific_settings">Device Specific Settings</string>
    <string name="preferences_miband_settings">Mi Band Settings</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="other">other</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="miband_pairing_using_dummy_userdata">No valid user data given, using dummy user data for now.</string>
    <string name="miband_pairing_tap_hint">When your Mi Band vibrates and blinks, tap it a few times in a row.</string>
    <string name="appinstaller_install">Install</string>
    <string name="discovery_connected_devices_hint">Make your device discoverable. Currently connected devices will likely not be discovered. If your device does not show up after two minutes, try again after rebooting your mobile device.</string>
    <string name="discovery_note">Note:</string>
    <string name="candidate_item_device_image">Device Image</string>
    <string name="miband_prefs_alias">Name/Alias</string>
    <string name="pref_header_vibration_count">Vibration Count</string>
    <string name="title_activity_sleepmonitor">Sleep Monitor</string>
    <string name="pref_write_logfiles">Write Log Files (needs restart)</string>
    <string name="initializing">initializing</string>
    <string name="busy_task_fetch_activity_data">Fetching Activity Data</string>
    <string name="sleep_activity_date_range">From %1$s to %2$s</string>
    <string name="miband_prefs_wearside">Wearing left or right?</string>
    <string name="pref_screen_vibration_profile">Vibration Profile</string>
    <string name="vibration_profile_staccato">Staccato</string>
    <string name="vibration_profile_short">Short</string>
    <string name="vibration_profile_medium">Medium</string>
    <string name="vibration_profile_long">Long</string>
    <string name="vibration_profile_waterdrop">Waterdrop</string>
    <string name="vibration_profile_ring">Ring</string>
    <string name="vibration_profile_alarm_clock">Alarm Clock</string>
    <string name="miband_prefs_vibration">Vibration</string>
    <string name="pref_screen_notification_profile_sms">SMS Notification</string>
    <string name="pref_header_vibration_settings">Vibration Settings</string>
    <string name="pref_screen_notification_profile_generic">Generic Notification</string>
    <string name="pref_screen_notification_profile_pebblemsg">Pebble Notification</string>
    <string name="pref_screen_notification_profile_k9mail">K9 Mail Notification</string>
    <string name="pref_screen_notification_profile_incoming_call">Incoming Call Notification</string>
    <string name="control_center_find_lost_device">Find lost Device</string>
    <string name="control_center_cancel_to_stop_vibration">Cancel to stop vibration.</string>
    <string name="title_activity_charts">Your Activity</string>
    <string name="title_activity_set_alarm">Configure Alarms</string>
</resources>