<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:mContext="ru.fors.remsmed.LoginActivity"
    android:background="@drawable/login">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:background="@null"
            android:src="@drawable/logo"
            android:paddingTop="30dp"
            android:paddingRight="60dp"
            android:paddingLeft="60dp"
            android:contentDescription="@string/app_name" />
    </LinearLayout>
    <!--logo_nuffield_green-->
    <!--logo_drugstore-->
    <!--logo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logo_title"
        android:id="@+id/tvLoginInfor"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="17sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/tvLoginLogin" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:text=""
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/registration_textedit_background"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp" />

            <EditText android:id="@+id/tvLoginPassword" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text=""
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:background="@drawable/registration_textedit_background"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="10dp" />

            <Button android:id="@+id/bLoginSignIn"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/signin"
                android:background="@color/main_color"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/main_font_color"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>



